<resources>
    <string name="app_name" translatable="false">Lab14</string>
    <string name="link" translatable="false">https://m2.material.io/components/cards</string>
    <string name="date_send" translatable="false">16.05.22 12:00</string>
    <string name="offline_status" translatable="false">Offline</string>
    <string name="invitation" translatable="false">Приглашаю провести уютный вечер за увлекательными играми! У нас есть несколько вариантов настолок, подходящих для любой компании.</string>
    <string name="default_text" translatable="false">Lydia Westervelt</string>
    <string name="sample" translatable="false">11.05.22 11:21</string>
    <string name="avatar_description" translatable="false">Аватар</string>
    <string name="menu_description" translatable="false">Меню</string>
    <string name="avatar_text" translatable="false">L</string>

    <string name="toastNotImplemented">Not implemented (default)</string>
    <string name="app_not_found">app not found</string>
    <string name="new_post_title">New Post</string>
    <string name="save_post" translatable="false">Save post</string>
    <string name="content_is_epmty" translatable="false">Content is epmty</string>
    <string name="delete_post" translatable="false">Delete post</string>
    <string name="update_post" translatable="false">Update post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_menu_posts">Posts</string>
    <string name="bottom_menu_events">Events</string>
    <string name="bottom_menu_users">Users</string>
    <string name="created_post">Created Post</string>
    <string name="postfragment">PostFragment</string>
    <string name="retry">Retry</string>
    <string name="network_error">Network Error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="new_event_hint">Content</string>
    <string name="remove">Remove</string>
    <string name="photo_preview">Photo preview</string>
</resources>